--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/montserrat": "^4.5.5",
+    "@fontsource/open-sans": "^4.5.6",
+    "@fontsource/roboto-mono": "^4.5.3",
+    "@fontsource/work-sans": "^4.5.5",
+    "@reduxjs/toolkit": "^1.8.0",
+    "albert-heijn-wrapper": "^1.0.3",
+    "framer-motion": "^6",
+    "jumbo-wrapper": "^1.0.10",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
