--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/work-sans": "^4.5.5",
     "@reduxjs/toolkit": "^1.8.0",
     "albert-heijn-wrapper": "^1.0.3",
+    "chakra-react-select": "^3.1.1",
     "framer-motion": "^6",
     "jumbo-wrapper": "^1.0.10",
     "next": "12.1.0",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-select": "^5.2.2",
     "redux": "^4.1.2"
   },
   "devDependencies": {
