feat: added Aldi products

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/work-sans": "^4.5.5",
     "@reduxjs/toolkit": "^1.8.0",
     "albert-heijn-wrapper": "^2.0.0",
+    "aldi-wrapper": "^1.0.0",
     "chakra-react-select": "^3.1.1",
     "framer-motion": "^6",
     "jumbo-wrapper": "^2.0.1",
