--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6",
     "jumbo-wrapper": "^2.0.1",
     "next": "12.1.0",
+    "plus-wrapper": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
