chore: updated dependencies, added netlify config

--- a/package.json
+++ b/package.json
@@ -9,35 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.6",
+    "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@fontsource/montserrat": "^4.5.5",
-    "@fontsource/open-sans": "^4.5.6",
-    "@fontsource/roboto-mono": "^4.5.3",
-    "@fontsource/work-sans": "^4.5.5",
+    "@fontsource/montserrat": "^4.5.7",
+    "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/roboto-mono": "^4.5.5",
+    "@fontsource/work-sans": "^4.5.7",
     "@reduxjs/toolkit": "^1.8.0",
     "albert-heijn-wrapper": "^2.0.0",
     "aldi-wrapper": "^1.0.0",
-    "chakra-react-select": "^3.1.1",
+    "chakra-react-select": "^3.1.2",
     "coop-wrapper": "^1.0.0",
     "framer-motion": "^6",
     "jumbo-wrapper": "^2.0.1",
-    "next": "12.1.0",
+    "next": "^12.1.2",
     "plus-wrapper": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.28.0",
+    "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
     "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "@netlify/plugin-nextjs": "^4.3.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.2",
+    "typescript": "^4.6.3"
   }
 }
