--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^6",
     "jumbo-wrapper": "^2.0.1",
     "next": "^12.1.2",
+    "pino": "^7.9.2",
     "plus-wrapper": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
