--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "start": "next start -H 0.0.0.0 -p ${PORT:-8080} | pino-pretty -t",
     "export": "next build && next export -o _static",
     "lint": "next lint"
   },
@@ -26,6 +26,7 @@
     "jumbo-wrapper": "^2.0.1",
     "next": "^12.1.2",
     "pino": "^7.9.2",
+    "pino-pretty": "^7.6.0",
     "plus-wrapper": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
